--- a/tecolotl-web/src/main/webapp/administracion/heredar-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/heredar-alumno.xhtml
@@ -63,8 +63,10 @@
                                     listener="#{heredarAlumnoControlador.buscaGrupo()}"
                                     render="@form formulario-grupo:seleccion-grupo"
                                     onevent="function funcion(data) { if (data.status === 'success'){
+                                        let seleccionGrupo = document.getElementById('formulario-grupo:seleccion-grupo');
                                         limpiaSeleccion();
                                         cargando();
+                                         seleccionGrupo.focus();
                                     }
 
                                     }"/>
@@ -76,7 +78,7 @@
                         <h:outputLabel value="grupo" for="seleccion-grupo" styleClass="uk-form-label uk-text-capitalize"/>
                         <h:graphicImage library="img" name="/alumno/esquadron-animado.svg" pt:uk-svg=""  styleClass="uk-svg ver-svg cargando-grupo" width="30" height="30"/>
                         <div class="uk-form-controls">
-                            <h:selectOneMenu id="seleccion-grupo" value="#{heredarAlumnoControlador.idGrupo}" styleClass="uk-select">
+                            <h:selectOneMenu id="seleccion-grupo" value="#{heredarAlumnoControlador.idGrupo}" styleClass="uk-select seleccion-heredar">
                                 <f:selectItem itemLabel="${otrosetiqueta['select']}" noSelectionOption="true" itemValue="#{null}"/>
                                 <f:selectItems value="#{heredarAlumnoControlador.grupoModeloLista}"
                                                var="grupoModelo"
@@ -91,7 +93,7 @@
                                 <f:ajax execute="seleccion-grupo"
                                         render="@form formulario-alumnos"
                                         listener="#{heredarAlumnoControlador.buscaAlumnosGrupo}"
-                                        onevent="function funcion(data){ if (data.status === 'success'){limpiaSeleccion(); eventoCheckbox(); tablaCargada();} }"/>
+                                        onevent="function funcion(data){ if (data.status === 'success'){limpiaSeleccion(); eventoCheckbox(); } }"/>
                             </h:commandButton>
                         </div>
                     </div>
