se desactivo boton reporte

--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -77,7 +77,7 @@
                     </div>
                     <div class="boton-regresa uk-width-2-3@m">
                         <h:button styleClass="boton-maestro-base" value="#{boton['back']}" outcome="tablero"/>
-                        <button id="reporte" class="boton-escuadron-base uk-text-uppercase" >report</button>
+                        <button id="reporte" class="boton-escuadron-base uk-text-uppercase" disabled="disabled" >report</button>
                     </div>
                 </div>
                 <!--CARDS WRAPPER-->
