--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -103,8 +103,8 @@
                                      </div>
                                      <div class="uk-width-1-1@s">
                                          <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-capitalize">#{alumno['dashboard.email']}:</span> #{alumnoControlador.alumnoModelo.correoPadreFamilia}</p>
-                                         <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top  uk-text-small "><span class="uk-text-bold uk-text-capitalize">#{alumno['dashboard.grade']}:</span> #{detalleAlumnoControlador.detalleAlumnoModelo.grado} <span class="uk-text-bold">&nbsp;Group:</span> #{detalleAlumnoControlador.detalleAlumnoModelo.grupo}</p>
-                                         <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-capitalize">#{alumno['dashboard.nivel']}:</span> #{alumnoControlador.alumnoModelo.nivelLenguajeModelo.valor}</p><p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold">Academic Year: </span><h:outputText value="#{detalleAlumnoControlador.detalleAlumnoModelo.inicio}"><f:convertDateTime type="date" pattern="yyyy/MM/dd"/></h:outputText> </p>
+                                         <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-capitalize">#{alumno['dashboard.nivel']}:</span> #{alumnoControlador.alumnoModelo.nivelLenguajeModelo.valor}</p>
+                                         <h:outputText styleClass="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small" rendered="${alumnoControlador.detalleAlumno2ModeloLista.size() eq 1}" value="ciclo escolar: ${alumnoControlador.detalleAlumno2ModeloLista.get(0).descripcion}"/>
                                      </div>
                                  </h:panelGroup>
                              </div>
