estilos spinner vista heredar

--- a/tecolotl-web/src/main/webapp/administracion/heredar-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/heredar-alumno.xhtml
@@ -25,10 +25,7 @@
         </f:metadata>
         <strong>Selecciona los alumnos que desee heredar al grupo: ${param['grupo-nombre']}</strong>
         <div uk-grid="">
-            <div class="uk-width-1-3 uk-position-relative">
-                <div class="cargando-grupo ver-svg">
-                    <h:graphicImage library="img" name="/alumno/esquadron-animado.svg" pt:uk-svg=""  styleClass="uk-svg"/>
-                </div>
+            <div class="uk-width-1-3 ">
                 <h:outputText value="Este Grupo aun no tiene relacionado un ciclo escolar" rendered="#{empty heredarAlumnoControlador.cicloEscolarModeloLista}"/>
                 <h:form id="formulario-ciclo-escoalr" rendered="#{not empty heredarAlumnoControlador.cicloEscolarModeloLista}">
                     <div class="uk-margin">
@@ -61,7 +58,7 @@
                         <h:message for="seleccion-profesor" styleClass="uk-text-danger uk-display-block primera-mayuscula"/>
                     </div>
                     <div class="uk-margin uk-flex uk-flex-right">
-                        <h:commandButton value="Buscar" styleClass="uk-button uk-button-primary" onclick="cargando();">
+                        <h:commandButton value="Buscar" styleClass="uk-button uk-button-primary" onclick="visibilidadSpinner(1);">
                             <f:ajax execute="seleccion-ciclo-escolar seleccion-profesor"
                                     listener="#{heredarAlumnoControlador.buscaGrupo()}"
                                     render="@form formulario-grupo:seleccion-grupo"
@@ -69,6 +66,7 @@
                                         let seleccionGrupo = document.getElementById('formulario-grupo:seleccion-grupo');
                                         limpiaSeleccion();
                                         cargando();
+                                        visibilidadSpinner(1);
                                          seleccionGrupo.focus();
                                     }
 
@@ -77,7 +75,10 @@
                     </div>
                 </h:form>
                 <h:form id="formulario-grupo">
-                    <div class="uk-margin">
+                    <div class="uk-margin uk-position-relative">
+                        <div id="spinner-grupo" class="cargando-grupo ver-svg">
+                            <h:graphicImage library="img" name="/alumno/esquadron-animado.svg" pt:uk-svg=""  styleClass="uk-svg"/>
+                        </div>
                         <h:outputLabel value="grupo" for="seleccion-grupo" styleClass="uk-form-label uk-text-capitalize"/>
                         <div class="uk-form-controls">
                             <h:selectOneMenu id="seleccion-grupo" value="#{heredarAlumnoControlador.idGrupo}" styleClass="uk-select seleccion-heredar">
@@ -91,18 +92,25 @@
                         </div>
                         <h:message id="mensaje-seleccion-grupo" for="seleccion-grupo" styleClass="uk-text-danger uk-display-block primera-mayuscula"/>
                         <div class="uk-margin uk-flex uk-flex-right">
-                            <h:commandButton id="btn-grupo" value="buscar" styleClass="uk-button uk-button-primary">
+                            <h:commandButton id="btn-grupo" value="buscar" styleClass="uk-button uk-button-primary" onclick="visibilidadSpinner(2);">
                                 <f:ajax execute="seleccion-grupo"
                                         render="@form formulario-alumnos"
                                         listener="#{heredarAlumnoControlador.buscaAlumnosGrupo}"
-                                        onevent="function funcion(data){ if (data.status === 'success'){limpiaSeleccion(); eventoCheckbox(); } }"/>
+                                        onevent="function funcion(data){ if (data.status === 'success'){
+                                        limpiaSeleccion();
+                                        eventoCheckbox();
+                                        visibilidadSpinner(2);
+                                         } }"/>
                             </h:commandButton>
                         </div>
                     </div>
                 </h:form>
             </div>
             <div class="uk-width-2-3">
-                <div class="uk-card uk-card-default uk-card-small uk-card-hover tabla">
+                <div class="uk-card uk-card-default uk-card-small uk-card-hover tabla uk-position-relative">
+                    <div id="spinner-alumnos" class="cargando-grupo ver-svg">
+                        <h:graphicImage library="img" name="/alumno/esquadron-animado.svg" pt:uk-svg=""  styleClass="uk-svg"/>
+                    </div>
                     <h:form id="formulario-alumnos">
                         <div class="uk-card-header uk-flex uk-flex-middle">
                             <span class="uk-display-inline-block uk-margin-small-right">Selecionar todos:</span>
