--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -256,7 +256,7 @@
 <!--				https://forms.zohopublic.com/eduspheresolutions/form/FreeTrialRequest/formperma/RZf6AOC-dNPzb0JhVwafln9HgdNqoek1HognqWVBYNg/htmlRecords/submit-->
 				<div>
 						<!-- Change or deletion of the name attributes in the input tag will lead to empty values on record submission-->
-						<form  action='https://forms.zohopublic.com/eduspheresolutions/form/FreeTrialRequest/formperma/RZf6AOC-dNPzb0JhVwafln9HgdNqoek1HognqWVBYNg/htmlRecords/submit' target="_blank" name='form' id='form' method='POST' accept-charset='UTF-8' enctype='multipart/form-data'>
+						<form  action='#' name='form' id='form' method='POST' accept-charset='UTF-8' enctype='multipart/form-data'>
 							<input type="hidden" name="zf_referrer_name" value=""/><!-- To Track referrals , place the referrer name within the " " in the above hidden input field -->
 							<input type="hidden" name="zf_redirect_url" value=""/><!-- To redirect to a specific page after record submission , place the respective url within the " " in the above hidden input field -->
 							<input type="hidden" name="zc_gad" value=""/><!-- If GCLID is enabled in Zoho CRM Integration, click details of AdWords Ads will be pushed to Zoho CRM -->
@@ -727,6 +727,6 @@
 	</script>
 <!--    <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/smtp.js"/>-->
 <!--	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/email.js"/>-->
-	<ui:remove><h:outputScript library="js" name="email.js"/></ui:remove>
+	<h:outputScript library="js" name="email.js"/>
 </h:body>
 </html>
